removed console.log and changed page icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href=
+    "https://www.svgrepo.com/show/486229/magnifying-glass-backup.svg"
+              type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gif Searcher</title>
   </head>
