final changes, added styles with tailwind

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     "https://www.svgrepo.com/show/486229/magnifying-glass-backup.svg"
               type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./output.css" rel="stylesheet">
     <title>Gif Searcher</title>
   </head>
   <body>
